tests/NormalTests/paczka1/fuzzy1/22782775.err
Error in line 1: SxXOQ A648 38,7
Error in line 12: A332 A332 14,3
Error in line 15: SxXOQ A887 262,6
Error in line 20: ilRVdkywzUc A648 48,2
Error in line 24: ilRVdkywzUc S962 75,6
Error in line 27: ilRVdkywzUc A648 0,7
